Overlapping words fix

--- a/src/app/flashcard/flashcard.component.scss
+++ b/src/app/flashcard/flashcard.component.scss
@@ -63,7 +63,7 @@
   }
   p{
     font: mat.get-theme-typography($theme, body-large);
-    line-height: 0em;
+    margin: 0;
   }
 
   .back {
